# omniport-backend

./: .gitignore  CODE_OF_CONDUCT.md  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
apps/: README.md
branding/: .gitignore  README.md
branding/institute/: .gitignore
configuration/: .gitignore  README.md  base_stencil.yml
configuration/sites/: site_stencil.yml
core/kernel/: config.json
core/protocol_tests/: apps.py  config.yml  http_urls.py  views.py  ws_urls.py
core/session_auth/: config.json  config.yml  serializers.py
core/token_auth/: apps.py  config.json  config.yml  http_urls.py  views.py
kernel/: apps.py
kernel/admin/: __init__.py  site.py
kernel/constants/: biological_information.py
kernel/errors/: auth.py  forms.py
kernel/managers/: auth.py  get_user.py
kernel/migrations/: 0001_initial.py  0002_add_fields.py  0002_contactinformation_locationinformation.py  0003_branch_centre_department.py  0003_maintainer.py  0004_person.py  0005_student.py  0006_student.py  0007_user.py  0008_facultymember.py
kernel/mixins/: period_mixin.py
kernel/models/: __init__.py  auth.py  person.py  root.py
kernel/permissions/: has_lockpicking_rights.py  (+1 more)
network_storage/: .gitignore
omniport/: .gitignore  README.md  dev-requirements.txt  manage.py  populate_db.py  prod-requirements.txt  requirements.txt  settings.py  urls.py
scripts/: start-django.sh  start-the-dj.sh  start-theia.sh
services/: README.md
shell/: swapper.py
(+394 files in other folders)
