[tool.poetry]
name = "omniport"
version = "0.1.0"
description = "An extensible, customizable, performant and powerful portal for educational institutes."
authors = ["IMG <img@iitr.ac.in>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
Django = {version = "3.2.15", extras = ["argon2"]}
inflection = "^0.5.1"
PyYAML = "^6.0"
celery = "^5.2.3"
firebase-admin = "^5.2.0"
psycopg2-binary = "^2.9.3"
Pillow = "^9.0.1"
gunicorn = "^20.1.0"
channels = "^3.0.4"
channels-redis = "^3.3.1"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-crispy-forms = "^1.14.0"
django-filter = "^21.1"
django-guardian = "^2.4.0"
djangorestframework-camel-case = "^1.3.0"
djangorestframework-simplejwt = "^5.0.0"
django-cors-headers = "^3.11.0"
django-countries = "^7.2.1"
django-mptt = "^0.13.4"
django-permanent = "^1.1.6"
django-redis = "^5.2.0"
django-tinymce4-lite = "^1.8.0"
swapper = "^1.3.0"
weasyprint = "^54.1"
python-memcached = "^1.59"
django-celery-results = "^2.2.0"
user-agents = "^2.2.0"
django-oauth-toolkit = "^1.7.0"
pydash = "^5.1.0"
sentry-sdk = "^1.5.5"
numpy = "^1.22.2"
pandas = "^1.4.1"
pdf2image = "^1.16.0"
rstr = "^3.0.0"
qrcode = "^7.3.1"
Twisted = {extras = ["http2", "tls"], version = "^22.1.0"}
python-sat = {extras = ["aiger", "pblib"], version = "^0.1.7-alpha.15"}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.0.1"
pipdeptree = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
